_includes/manuals/1.2/5.4.1_comms_puppetmaster.md

In a typical ENC-based setup with reporting, puppet masters require access to Foreman for three tasks:

1. Retrieval of external nodes information (classes, parameters)
2. Uploading of host facts
3. Uploading of host reports

All traffic here is initiated by the puppet master itself.  Other traffic from Foreman to the puppet master for certificate signing etc. is handled via smart proxies (SSL configuration covered in the next section).

#### Configuration options

The Foreman interface authorizes access to puppet master interfaces based on its list of registered smart proxies with the *Puppet* feature, and identifies hosts using client SSL certificates.

Five main settings control the authentication, the first are in Foreman under *Settings*, *Auth*:

* *require_ssl_puppetmasters* (default: true), requires a client SSL certificate on the puppet master requests, and will verify the CN of the certificate against the smart proxies.  If false, it uses the reverse DNS of the IP address making the request.
* *restrict_registered_puppetmasters* (default: true), only permits access to hosts that have a registered smart proxy with the *Puppet* feature.
* *trusted_puppetmaster_hosts*, a whitelist of hosts that overrides the check for a registered smart proxy

And two in `config/settings.yaml`:

* *login* (default: true), must be enabled to prevent anonymous access to Foreman.
* *require_ssl* (default: false), should be enabled to require SSL for all communications, which in turn will require client SSL certificates if *require_ssl_puppetmasters* is also enabled.  If false, host-based access controls will be available for HTTP requests.

#### Enabling full SSL communications

Using Apache HTTP with mod_ssl and mod_passenger is recommended.  For simple setups, the Puppet certificate authority (CA) can be used, with Foreman and other hosts using certificates generated by `puppet cert`.

1. Set Foreman's *require_ssl_puppetmasters*, *restrict_registered_puppetmasters* and *require_ssl* to _true_.
2. The mod_ssl configuration must contain:
  <ol><li>*SSLCACertificateFile* set to the Puppet CA</li>
  <li>*SSLVerifyClient optional*</li>
  <li>*SSLOptions +StdEnvVars*</li></ol>
3. ENC script (e.g. `/etc/puppet/node.rb`) should have these settings:
  <ol><li>*:ssl_ca* set to the Puppet CA</li>
  <li>*:ssl_cert* set to the puppet master's certificate</li>
  <li>*:ssl_key* set to the puppet master's private key</li></ol>
4. Report processor (e.g. `/usr/lib/ruby/site_ruby/1.8/puppet/reports/foreman.rb`) should have these settings:
  <ol><li>*$foreman_ssl_ca* set to the Puppet CA</li>
  <li>*$foreman_ssl_cert* set to the puppet master's certificate</li>
  <li>*$foreman_ssl_key* set to the puppet master's private key</li></ol>

##### Troubleshooting

Warning messages will be printed to Foreman's log file (typically `/var/log/foreman/production.log`) when SSL-based authentication fails.

* _No SSL cert with CN supplied_ indicates no client SSL certificate was supplied, or the CN wasn't present on a certificate.  Check the client script has the certificate and key configured and that mod_ssl has *SSLVerifyClient* set.
* _SSL cert has not been verified_ indicates the client SSL certificate didn't validate with the SSL terminator's certificate authority.  Check the client SSL certificate is signed by the CA set in mod_ssl's *SSLCACertificateFile* and is still valid.  More information might be in error logs.
* _SSL is required_ indicates the client is using an HTTP URL instead of HTTPS.
* _No smart proxy server found on $HOST_ indicates Foreman has no smart proxy registered for the source host, add it to the Smart Proxies page in Foreman.  A common cause of this issue is the hostname in the URL doesn't match the hostname seen here in the log file - change the registered proxy URL to match.  If no smart proxy is available or can be installed, use *trusted_puppetmaster_hosts* and add this hostname to the whitelist.

##### Advanced SSL notes

A typical small setup will use a single Puppet CA and certificates it provides for the Foreman host and puppet master hosts.  In larger setups with multiple CAs or an internal CA, this will require more careful configuration to ensure all hosts can trust each other.

* Ensure the Common Name (CN) is present in certificates used by Foreman (as clients will validate it) and puppet master clients (used to verify against smart proxies).
* Foreman's SSL terminator must be able to validate puppet master client SSL certificates.  In Apache with mod_ssl, the *SSLCACertificateFile* option must point to the CA used to validate clients and *SSLVerifyClient* set to _optional_.
* Environment variables from the SSL terminator are used to get the client certificate's DN and verification status.  mod_ssl's *SSLOptions +StdEnvVars* setting enables this.  Variable names are defined by *ssl_client_dn_env* and *ssl_client_verify_env* settings in Foreman.

#### Reduced security: HTTP host-based authentication

In non-SSL setups, host-based authentication can be performed, so any connection from a host running a puppet smart proxy is able to access the interfaces.

1. Set *restrict_registered_puppetmasters* to _true_.
1. Set *require_ssl_puppetmasters* and *require_ssl* to _false_.

#### No security: disable authentication

Entirely disabling authentication isn't recommended, since it can lead to security exploits through YAML import interfaces and expose sensitive host information, however it may be useful for troubleshooting.

1. Set *require_ssl_puppetmasters*, *restrict_registered_puppetmasters* and *require_ssl* to _false_.

